Fixing spacing for About header

--- a/css/monica-lin.css
+++ b/css/monica-lin.css
@@ -2417,7 +2417,7 @@
 }
 
 .div-block-103 {
-  margin-top: 50px;
+  margin-top: 80px;
   margin-right: -120px;
   margin-left: -120px;
 }
